[Windows] URL printing code in DRT doesn't match WTR or Mac DRT https://bugs.webkit.org/show_bug.cgi?id=119583

Reviewed by Alexey Proskuryakov.

* DumpRenderTree/win/DumpRenderTree.cpp:
(urlSuitableForTestResult): Revise URL output to match Mac DRT by emiting last path
component if the URL does not contain the expected base URL.


Canonical link: https://commits.webkit.org/137869@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@154194 268f45cc-cd09-0410-ab3c-d52691b4dbfc